<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNewListName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_list_name" />

    <Button
        android:id="@+id/buttonCreateList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_list" />

    <Spinner
        android:id="@+id/spinnerExistingLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />



    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
